btsk-41: 기본 폴더 조회/생성 로직  및 Source API 개선 (#56)
btsk-41: 기본 폴더 조회/생성 로직 리팩토링 및 Source API 개선
레포지토리에서 member를 사용하던 기존 방식에서
좀 더 도메인간 결합성을 줄이는 방식으로, 즉 서비스단에서 비지니스 로직을 처리하는 방식으로 변경
- findOrCreateDefaultFolder 메서드
- SourceResponse 개선: QuestionSet 수, 페이지 수(pageCount) 등 상세 메타데이터 추가.
- findSourcesByMemberIdWithDetails 쿼리 및 메서드 추가: 소스 상세 정보와 관련 엔티티를 함께 조회.
- Source 엔티티에 pageCount 필드 및 업데이트 메서드 추가.
- Source API 트랜잭션 처리 도입

Signed-off-by: Hyeonjun0527 <osumaniaddict527@gmail.com>